<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.AddSymbolFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_symbol_instructions"/>

    <Button
        android:id="@+id/add_symbol_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_symbol_submit_button"/>

    <EditText
        android:id="@+id/symbol_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/add_symbol_symbol_hint"
        android:inputType="text"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/layout_category_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/category_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/add_symbol_category_hint"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/reference_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/add_symbol_reference_hint"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/meaning_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:gravity="start|top"
        android:hint="@string/add_symbol_definition_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:importantForAutofill="no" />

</LinearLayout>